--- a/h2hweb/package.json
+++ b/h2hweb/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
+    "react-tooltip": "^5.28.1",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
