--- a/h2hbackend/package.json
+++ b/h2hbackend/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "connect-pg-simple": "^9.0.1",
     "cors": "^2.8.5",
+    "cubing": "^0.31.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
