--- a/h2hweb/package.json
+++ b/h2hweb/package.json
@@ -14,12 +14,14 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
+    "cubing": "^0.31.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
     "react-tooltip": "^5.28.1",
+    "scramble-display": "^0.6.2",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
