--- a/h2hweb/package.json
+++ b/h2hweb/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
+    "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
     "scramble-display": "^0.6.2",
     "tailwindcss": "^4.1.4"
