--- a/h2hbackend/package.json
+++ b/h2hbackend/package.json
@@ -2,6 +2,7 @@
   "name": "h2hbackend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon index.js"
   },
