--- a/h2hweb/package.json
+++ b/h2hweb/package.json
@@ -17,6 +17,8 @@
     "cubing": "^0.31.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.513.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
@@ -35,6 +37,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "nodemon": "^3.1.10",
-    "vite": "^6.3.1"
+    "vite": "^6.3.5"
   }
 }
