--- a/h2hweb/package.json
+++ b/h2hweb/package.json
@@ -25,7 +25,8 @@
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
     "scramble-display": "^0.6.2",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "vercel": "^42.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
