--- a/h2hweb/package.json
+++ b/h2hweb/package.json
@@ -14,12 +14,14 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "cubing": "^0.31.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.513.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
     "react-toastify": "^11.0.5",
