--- a/h2hbackend/package.json
+++ b/h2hbackend/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.1",
     "passport": "^0.7.0",
     "passport-wca": "^1.0.3",
-    "pg": "^8.15.6"
+    "pg": "^8.15.6",
+    "vercel": "^42.3.0"
   }
 }
