--- a/h2hbackend/package.json
+++ b/h2hbackend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
+    "startDev": "nodemon index.js",
     "build": "echo \"No build step Necessary\""
   },
   "author": "",
